# fem-mcf

./: .gitignore  CMakeLists.txt  README.md  RelaxationMCF.cpp  setup.sh
src/: AxialMCFSolver.cpp  AxialMCFSolver.hpp  CSFSolver.cpp  CSFSolver.hpp
test/: AngenentTestProblem.cpp  CircleTestProblem.cpp  DirBCTestProblem.cpp  PaperclipTestProblem.cpp  RoundToriTestProblem.cpp  SolverDiagnostics.cpp  SolverDiagnostics.hpp  SphereTestProblem.cpp  ang_distance_field_neumann.csv
